fix(game-cover-overlay): adjust position of game cover overlay for better visibility

--- a/src/app/components/event-types/live-event.component.scss
+++ b/src/app/components/event-types/live-event.component.scss
@@ -194,7 +194,7 @@
 
 .game-cover-overlay {
   position: absolute;
-  top: 12px;
+  top: 56px;
   right: 12px;
   width: 48px;
   height: 64px;
